manifests/install/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: labelwatcher
  name: labelwatcher
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: labelwatcher
status:
  loadBalancer: {}
