manifests/install/val-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "labelwatcher.hardik.dev"
webhooks:
  - name: "labelwatcher.hardik.dev"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["UPDATE"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: "default"
        name: "labelwatcher"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZURENDQXpTZ0F3SUJBZ0lVRzkrK2ZIKzFXaHFvc3VmdW5EbkNWeC9JaUw4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RWhNQjhHQTFVRUF3d1liR0ZpWld4M1lYUmphR1Z5TG1SbFptRjFiSFF1YzNaak1CNFhEVEl5TURVdwpNakEwTkRNME9Gb1hEVEl6TURVd01qQTBORE0wT0Zvd0l6RWhNQjhHQTFVRUF3d1liR0ZpWld4M1lYUmphR1Z5CkxtUmxabUYxYkhRdWMzWmpNSUlDSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQWc4QU1JSUNDZ0tDQWdFQXY0ckcKSWI0ZE53VTFFSHZGQUM5OGRKdHVKRWFhZWp6d1Fabmd2YTFxMWVObDM3R2Q1Wm5lUjg2ZkJnODBWYnNMbkNuVwpDRXBXWDZMUlN [...]
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 5
